--- a/angel_jpcode3/angel_access_tblUnit.ipynb
+++ b/angel_jpcode3/angel_access_tblUnit.ipynb
@@ -328,7 +328,8 @@
     "\n",
     "allowed_start_date = pd.to_datetime(\"2023-01-01\")\n",
     "allowed_end_date = pd.to_datetime(\"2025-08-11\")\n",
-    "valid_status = [\"\", \"\", \"\", \"\", \"\", \"\"]"
+    "valid_rstatus = [\"Allocated\", \"Assigned\", \"Booked In\", \"Completed\", \"Returned\"]\n",
+    "product_id_stored = [\"\"] # trial config file parser"
    ]
   },
   {
