--- a/angel_jpcode3/angel_access_tblUnit.ipynb
+++ b/angel_jpcode3/angel_access_tblUnit.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "2e97bec3",
    "metadata": {},
    "outputs": [],
@@ -335,7 +335,7 @@
     "        value = line.strip()\n",
     "        if value:\n",
     "            product_id_stored.append(value)\n",
-    "\n"
+    "jhjhjhjhjhjhjhjhjh\n"
    ]
   },
   {
