unexpected entry work in progress with product ids

--- a/angel_jpcode3/angel_access_tblUnit.ipynb
+++ b/angel_jpcode3/angel_access_tblUnit.ipynb
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "33bedfdf",
    "metadata": {},
    "outputs": [
@@ -1060,7 +1060,7 @@
     }
    ],
    "source": [
-    "error_summary_access_tblUnit"
+    "error_summary_access_tblUnit #hhhhh"
    ]
   }
  ],
