--- a/angel_jpcode3/angel_tracker_et.ipynb
+++ b/angel_jpcode3/angel_tracker_et.ipynb
@@ -46,6 +46,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "c4469a2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load req ref\n",
+    "\n",
+    "requisition_po_numbers_2023_ref = pd.read_csv(\"fnd_gfm_50117894-req-summary-jan-dec-2023-AN1446-ICT-consolidated.csv\")\n",
+    "requisition_po_numbers_2024_ref = pd.read_csv(\"fnd_gfm_50117895-req-summary-jan-dec-2024-AN1446-ICT-consolidated.csv\")\n",
+    "requisition_po_numbers_2025_ref = pd.read_csv(\"fnd_gfm_50117898-req-summary-jan-aug-2025-AN1446-ICT-consolidated.csv\")\n",
+    "req_po_ref_23_25 = pd.concat([requisition_po_numbers_2023_ref, requisition_po_numbers_2024_ref, requisition_po_numbers_2025_ref], ignore_index=True)\n",
+    "req_ref_stored = req_po_ref_23_25[\"ReqNumber\"].astype(\"str\").tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "588033b6",
    "metadata": {},
@@ -496,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9a198e82",
    "metadata": {},
    "outputs": [],
@@ -959,20 +975,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d312f867",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load all files\n",
-    "\n",
-    "requisition_po_numbers_2023_ref = pd.read_csv(\"\")\n",
-    "requisition_po_numbers_2024_ref = pd.read_csv(\"\")\n",
-    "requisition_po_numbers_2025_ref = pd.read_csv(\"\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "id": "2cc60671",
    "metadata": {},
@@ -1023,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "98630b6c",
    "metadata": {},
    "outputs": [],
@@ -1119,7 +1121,43 @@
     "\n",
     "\n",
     "# unexpected requisition number error\n",
+    "\n",
+    "maskfilter_reqnum = ~tracker_parsed[\"Requisition_No\"].isin(req_ref_stored)\n",
+    "\n",
+    "unexpected_reqnum_count = tracker_parsed.loc[\n",
+    "    maskfilter_reqnum & tracker_parsed[\"Requisition_No\"].notna()].shape[0]\n",
+    "\n",
+    "if unexpected_reqnum_count > 0:\n",
+    "    summary_records.append({\n",
+    "    \"error_type\": \"Unexpected Requisition Number\",\n",
+    "    \"source_system\": source_system,\n",
+    "    \"data_period\": data_period,\n",
+    "    \"date_checked\": date_checked,\n",
+    "    \"field_name\": \"Requisition Number\",\n",
+    "    \"error_count\": unexpected_reqnum_count\n",
+    "    })\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "6778e647",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "443"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unexpected_reqnum_count"
    ]
   },
   {
@@ -1184,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "d88fdcba",
    "metadata": {},
    "outputs": [],
@@ -1213,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "00c26ad5",
    "metadata": {},
    "outputs": [
@@ -1535,44 +1573,54 @@
        "      <td>Total Cost</td>\n",
        "      <td>13</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Unexpected Requisition Number</td>\n",
+       "      <td>TRACKER</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-08-27</td>\n",
+       "      <td>Requisition Number</td>\n",
+       "      <td>443</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             error_type source_system     data_period date_checked  \\\n",
-       "0         Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "1         Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "2         Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "3         Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "4         Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "5         Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "6         Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "7         Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "8         Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "9         Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "10        Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "11        Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "12        Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "13        Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "14       Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "15       Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "16       Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "17       Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "18       Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "19       Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "20       Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "21       Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "22       Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "23       Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "24       Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "25       Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "26       Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "27       Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "28  Out of Range Values       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "29   Out of Range Dates       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "30  Out of Range Values       TRACKER  23-24 to 24-25   2025-08-27   \n",
-       "31  Cost Value Mismatch       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "                       error_type source_system     data_period date_checked  \\\n",
+       "0                   Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "1                   Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "2                   Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "3                   Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "4                   Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "5                   Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "6                   Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "7                   Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "8                   Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "9                   Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "10                  Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "11                  Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "12                  Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "13                  Missing Field       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "14                 Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "15                 Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "16                 Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "17                 Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "18                 Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "19                 Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "20                 Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "21                 Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "22                 Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "23                 Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "24                 Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "25                 Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "26                 Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "27                 Invalid Format       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "28            Out of Range Values       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "29             Out of Range Dates       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "30            Out of Range Values       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "31            Cost Value Mismatch       TRACKER  23-24 to 24-25   2025-08-27   \n",
+       "32  Unexpected Requisition Number       TRACKER  23-24 to 24-25   2025-08-27   \n",
        "\n",
        "                field_name  error_count  \n",
        "0      parsed_Request_Date            6  \n",
@@ -1606,10 +1654,11 @@
        "28                      FY          307  \n",
        "29  parsed_Collection_Date            0  \n",
        "30                    Site          461  \n",
-       "31              Total Cost           13  "
+       "31              Total Cost           13  \n",
+       "32      Requisition Number          443  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
