adding export csv section

--- a/angel_jpcode3/notebooks/angel_access_tblUnit.ipynb
+++ b/angel_jpcode3/notebooks/angel_access_tblUnit.ipynb
@@ -151,7 +151,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>62385</td>\n",
-       "      <td>2025-08-27 17:43:46.569625</td>\n",
+       "      <td>2025-09-21 19:11:55.693191</td>\n",
        "      <td>22</td>\n",
        "      <td>297</td>\n",
        "      <td>0.0</td>\n",
@@ -171,7 +171,7 @@
       ],
       "text/plain": [
        "   UnitID                 batch_load  ProductID  POID  RequestID     Status  \\\n",
-       "0   62385 2025-08-27 17:43:46.569625         22   297        0.0  Booked In   \n",
+       "0   62385 2025-09-21 19:11:55.693191         22   297        0.0  Booked In   \n",
        "\n",
        "  SerialNumber DateRecieved AssetNumber AllocatedUser             DateCreated  \\\n",
        "0          NaN   2023-03-30         NaN           NaN 2023-03-30 10:04:28.223   \n",
@@ -627,17 +627,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "ada688b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "error_summary_access_tblUnit = pd.DataFrame(summary_records)"
+    "error_summary_access_tblUnit = pd.DataFrame(summary_records)\n",
+    "\n",
+    "error_summary_access_tblUnit[\"field_name\"] = error_summary_access_tblUnit[\"field_name\"].str.replace(r\"^parsed_\", \"\", regex=True)\n",
+    "\n",
+    "error_summary_access_tblUnit = error_summary_access_tblUnit[error_summary_access_tblUnit[\"error_count\"] > 0]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "33bedfdf",
    "metadata": {},
    "outputs": [
@@ -673,43 +677,13 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Missing Field</td>\n",
-       "      <td>ACCESS</td>\n",
-       "      <td>tblUnit</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_UnitID</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Missing Field</td>\n",
-       "      <td>ACCESS</td>\n",
-       "      <td>tblUnit</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_ProductID</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Missing Field</td>\n",
-       "      <td>ACCESS</td>\n",
-       "      <td>tblUnit</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_POID</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Missing Field</td>\n",
        "      <td>ACCESS</td>\n",
        "      <td>tblUnit</td>\n",
        "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_RequestID</td>\n",
+       "      <td>2025-09-21</td>\n",
+       "      <td>RequestID</td>\n",
        "      <td>184</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -718,8 +692,8 @@
        "      <td>ACCESS</td>\n",
        "      <td>tblUnit</td>\n",
        "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_Status</td>\n",
+       "      <td>2025-09-21</td>\n",
+       "      <td>Status</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -728,8 +702,8 @@
        "      <td>ACCESS</td>\n",
        "      <td>tblUnit</td>\n",
        "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_SerialNumber</td>\n",
+       "      <td>2025-09-21</td>\n",
+       "      <td>SerialNumber</td>\n",
        "      <td>25465</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -738,8 +712,8 @@
        "      <td>ACCESS</td>\n",
        "      <td>tblUnit</td>\n",
        "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_DateRecieved</td>\n",
+       "      <td>2025-09-21</td>\n",
+       "      <td>DateRecieved</td>\n",
        "      <td>37421</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -748,8 +722,8 @@
        "      <td>ACCESS</td>\n",
        "      <td>tblUnit</td>\n",
        "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_AssetNumber</td>\n",
+       "      <td>2025-09-21</td>\n",
+       "      <td>AssetNumber</td>\n",
        "      <td>31411</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -758,19 +732,9 @@
        "      <td>ACCESS</td>\n",
        "      <td>tblUnit</td>\n",
        "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_AllocatedUser</td>\n",
+       "      <td>2025-09-21</td>\n",
+       "      <td>AllocatedUser</td>\n",
        "      <td>34811</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Missing Field</td>\n",
-       "      <td>ACCESS</td>\n",
-       "      <td>tblUnit</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_DateCreated</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -778,8 +742,8 @@
        "      <td>ACCESS</td>\n",
        "      <td>tblUnit</td>\n",
        "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_IMEI_2</td>\n",
+       "      <td>2025-09-21</td>\n",
+       "      <td>IMEI_2</td>\n",
        "      <td>180</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -788,8 +752,8 @@
        "      <td>ACCESS</td>\n",
        "      <td>tblUnit</td>\n",
        "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_IMEI_1</td>\n",
+       "      <td>2025-09-21</td>\n",
+       "      <td>IMEI_1</td>\n",
        "      <td>36396</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -798,69 +762,9 @@
        "      <td>ACCESS</td>\n",
        "      <td>tblUnit</td>\n",
        "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_MobilePhone</td>\n",
+       "      <td>2025-09-21</td>\n",
+       "      <td>MobilePhone</td>\n",
        "      <td>36306</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>ACCESS</td>\n",
-       "      <td>tblUnit</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_UnitID</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>ACCESS</td>\n",
-       "      <td>tblUnit</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_ProductID</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>ACCESS</td>\n",
-       "      <td>tblUnit</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_POID</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>ACCESS</td>\n",
-       "      <td>tblUnit</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_RequestID</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>ACCESS</td>\n",
-       "      <td>tblUnit</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_Status</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>ACCESS</td>\n",
-       "      <td>tblUnit</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_SerialNumber</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
@@ -868,39 +772,9 @@
        "      <td>ACCESS</td>\n",
        "      <td>tblUnit</td>\n",
        "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_DateRecieved</td>\n",
+       "      <td>2025-09-21</td>\n",
+       "      <td>DateRecieved</td>\n",
        "      <td>37421</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>ACCESS</td>\n",
-       "      <td>tblUnit</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_AssetNumber</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>ACCESS</td>\n",
-       "      <td>tblUnit</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_AllocatedUser</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>ACCESS</td>\n",
-       "      <td>tblUnit</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_DateCreated</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
@@ -908,8 +782,8 @@
        "      <td>ACCESS</td>\n",
        "      <td>tblUnit</td>\n",
        "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_IMEI_2</td>\n",
+       "      <td>2025-09-21</td>\n",
+       "      <td>IMEI_2</td>\n",
        "      <td>180</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -918,19 +792,9 @@
        "      <td>ACCESS</td>\n",
        "      <td>tblUnit</td>\n",
        "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_IMEI_1</td>\n",
+       "      <td>2025-09-21</td>\n",
+       "      <td>IMEI_1</td>\n",
        "      <td>106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>ACCESS</td>\n",
-       "      <td>tblUnit</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>parsed_MobilePhone</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
@@ -938,7 +802,7 @@
        "      <td>ACCESS</td>\n",
        "      <td>tblUnit</td>\n",
        "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
+       "      <td>2025-09-21</td>\n",
        "      <td>Request Status</td>\n",
        "      <td>118</td>\n",
        "    </tr>\n",
@@ -948,19 +812,9 @@
        "      <td>ACCESS</td>\n",
        "      <td>tblUnit</td>\n",
        "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
+       "      <td>2025-09-21</td>\n",
        "      <td>DateCreated</td>\n",
        "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Out of Range Dates</td>\n",
-       "      <td>ACCESS</td>\n",
-       "      <td>tblUnit</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
-       "      <td>DateReceived</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
@@ -968,7 +822,7 @@
        "      <td>ACCESS</td>\n",
        "      <td>tblUnit</td>\n",
        "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
+       "      <td>2025-09-21</td>\n",
        "      <td>SerialNumber</td>\n",
        "      <td>608</td>\n",
        "    </tr>\n",
@@ -978,7 +832,7 @@
        "      <td>ACCESS</td>\n",
        "      <td>tblUnit</td>\n",
        "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
+       "      <td>2025-09-21</td>\n",
        "      <td>AssetNumber</td>\n",
        "      <td>17</td>\n",
        "    </tr>\n",
@@ -988,7 +842,7 @@
        "      <td>ACCESS</td>\n",
        "      <td>tblUnit</td>\n",
        "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-27</td>\n",
+       "      <td>2025-09-21</td>\n",
        "      <td>ProductID</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -998,81 +852,61 @@
       ],
       "text/plain": [
        "                 error_type source_system system_table     data_period  \\\n",
-       "0             Missing Field        ACCESS      tblUnit  23-24 to 24-25   \n",
-       "1             Missing Field        ACCESS      tblUnit  23-24 to 24-25   \n",
-       "2             Missing Field        ACCESS      tblUnit  23-24 to 24-25   \n",
        "3             Missing Field        ACCESS      tblUnit  23-24 to 24-25   \n",
        "4             Missing Field        ACCESS      tblUnit  23-24 to 24-25   \n",
        "5             Missing Field        ACCESS      tblUnit  23-24 to 24-25   \n",
        "6             Missing Field        ACCESS      tblUnit  23-24 to 24-25   \n",
        "7             Missing Field        ACCESS      tblUnit  23-24 to 24-25   \n",
        "8             Missing Field        ACCESS      tblUnit  23-24 to 24-25   \n",
-       "9             Missing Field        ACCESS      tblUnit  23-24 to 24-25   \n",
        "10            Missing Field        ACCESS      tblUnit  23-24 to 24-25   \n",
        "11            Missing Field        ACCESS      tblUnit  23-24 to 24-25   \n",
        "12            Missing Field        ACCESS      tblUnit  23-24 to 24-25   \n",
-       "13           Invalid Format        ACCESS      tblUnit  23-24 to 24-25   \n",
-       "14           Invalid Format        ACCESS      tblUnit  23-24 to 24-25   \n",
-       "15           Invalid Format        ACCESS      tblUnit  23-24 to 24-25   \n",
-       "16           Invalid Format        ACCESS      tblUnit  23-24 to 24-25   \n",
-       "17           Invalid Format        ACCESS      tblUnit  23-24 to 24-25   \n",
-       "18           Invalid Format        ACCESS      tblUnit  23-24 to 24-25   \n",
        "19           Invalid Format        ACCESS      tblUnit  23-24 to 24-25   \n",
-       "20           Invalid Format        ACCESS      tblUnit  23-24 to 24-25   \n",
-       "21           Invalid Format        ACCESS      tblUnit  23-24 to 24-25   \n",
-       "22           Invalid Format        ACCESS      tblUnit  23-24 to 24-25   \n",
        "23           Invalid Format        ACCESS      tblUnit  23-24 to 24-25   \n",
        "24           Invalid Format        ACCESS      tblUnit  23-24 to 24-25   \n",
-       "25           Invalid Format        ACCESS      tblUnit  23-24 to 24-25   \n",
        "26      Out of Range Values        ACCESS      tblUnit  23-24 to 24-25   \n",
        "27       Out of Range Dates        ACCESS      tblUnit  23-24 to 24-25   \n",
-       "28       Out of Range Dates        ACCESS      tblUnit  23-24 to 24-25   \n",
        "29  Duplicate Serial Number        ACCESS      tblUnit  23-24 to 24-25   \n",
        "30   Duplicate Asset Number        ACCESS      tblUnit  23-24 to 24-25   \n",
        "31    Unexpected Product ID        ACCESS      tblUnit  23-24 to 24-25   \n",
        "\n",
-       "   date_checked            field_name  error_count  \n",
-       "0    2025-08-27         parsed_UnitID            0  \n",
-       "1    2025-08-27      parsed_ProductID            0  \n",
-       "2    2025-08-27           parsed_POID            0  \n",
-       "3    2025-08-27      parsed_RequestID          184  \n",
-       "4    2025-08-27         parsed_Status            1  \n",
-       "5    2025-08-27   parsed_SerialNumber        25465  \n",
-       "6    2025-08-27   parsed_DateRecieved        37421  \n",
-       "7    2025-08-27    parsed_AssetNumber        31411  \n",
-       "8    2025-08-27  parsed_AllocatedUser        34811  \n",
-       "9    2025-08-27    parsed_DateCreated            0  \n",
-       "10   2025-08-27         parsed_IMEI_2          180  \n",
-       "11   2025-08-27         parsed_IMEI_1        36396  \n",
-       "12   2025-08-27    parsed_MobilePhone        36306  \n",
-       "13   2025-08-27         parsed_UnitID            0  \n",
-       "14   2025-08-27      parsed_ProductID            0  \n",
-       "15   2025-08-27           parsed_POID            0  \n",
-       "16   2025-08-27      parsed_RequestID            0  \n",
-       "17   2025-08-27         parsed_Status            0  \n",
-       "18   2025-08-27   parsed_SerialNumber            0  \n",
-       "19   2025-08-27   parsed_DateRecieved        37421  \n",
-       "20   2025-08-27    parsed_AssetNumber            0  \n",
-       "21   2025-08-27  parsed_AllocatedUser            0  \n",
-       "22   2025-08-27    parsed_DateCreated            0  \n",
-       "23   2025-08-27         parsed_IMEI_2          180  \n",
-       "24   2025-08-27         parsed_IMEI_1          106  \n",
-       "25   2025-08-27    parsed_MobilePhone            0  \n",
-       "26   2025-08-27        Request Status          118  \n",
-       "27   2025-08-27           DateCreated            8  \n",
-       "28   2025-08-27          DateReceived            0  \n",
-       "29   2025-08-27          SerialNumber          608  \n",
-       "30   2025-08-27           AssetNumber           17  \n",
-       "31   2025-08-27             ProductID            1  "
+       "   date_checked      field_name  error_count  \n",
+       "3    2025-09-21       RequestID          184  \n",
+       "4    2025-09-21          Status            1  \n",
+       "5    2025-09-21    SerialNumber        25465  \n",
+       "6    2025-09-21    DateRecieved        37421  \n",
+       "7    2025-09-21     AssetNumber        31411  \n",
+       "8    2025-09-21   AllocatedUser        34811  \n",
+       "10   2025-09-21          IMEI_2          180  \n",
+       "11   2025-09-21          IMEI_1        36396  \n",
+       "12   2025-09-21     MobilePhone        36306  \n",
+       "19   2025-09-21    DateRecieved        37421  \n",
+       "23   2025-09-21          IMEI_2          180  \n",
+       "24   2025-09-21          IMEI_1          106  \n",
+       "26   2025-09-21  Request Status          118  \n",
+       "27   2025-09-21     DateCreated            8  \n",
+       "29   2025-09-21    SerialNumber          608  \n",
+       "30   2025-09-21     AssetNumber           17  \n",
+       "31   2025-09-21       ProductID            1  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "error_summary_access_tblUnit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "34d26944",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error_summary_access_tblUnit.to_csv(\"tblunit_access_error_report.csv\", index=False)"
    ]
   }
  ],
